# logbook

./: CHANGELOG.md  LICENSE.txt  README.md  ROADMAP.md
logbook/: .gitignore  Cargo.toml  config.toml
logbook-server/: Cargo.toml  sqlx-data.json
logbook-server/sql/connections/: create.sql  get_by_ends.sql  get_by_id.sql
logbook-server/sql/rides/: create.sql  get_by_id.sql  get_paginated.sql  update_by_id.sql
logbook-server/sql/stations/: create.sql  update_by_id.sql
logbook-server/sql/tokens/: exists.sql
logbook-server/src/: extractors.rs  main.rs  models.rs  repos.rs  routers.rs
logbook-server/src/repos/: connections.rs  rides.rs  stations.rs  tokens.rs
logbook/.sqlx/: query-0f5a60ba9cfeeb02544547bdfdce8495ca85de73757491b67d9e4cdc4de81592.json  query-190acdba09ae320bc39f04e7e4ce0ccf9c7f54344a3308fe2fa5cc7616ab1d9c.json  query-2523479d7023791dc3c337c451a15421dec47620b982759534b1c1e121895d48.json  query-282ab92aeaf8f65b9242f8d31c7794f40c3c25061af4a9f52a2673a562a2009b.json  query-3bddf4101b604249811e44853dc19ac64c7f9fa3e557bb808a43863f6d9bd52f.json  query-48cfeb577bfb92d4791f880acbe8d129e8f7951568a0660fc01d237f66590f95.json  query-5ba4f2017eb2e2283d74415a3e41f5baf5dbe87733f3618500863af5be06a187.json  query-6b2069902b17a135c3714c18210e06044809d3253054732b2837271c722d6cc7.json  query-a2d038245924ee8cca701d8170849acd120ed669a2083cccb45d4e2bd3868b02.json  query-aa2784560b2df20a794d8e99d88b2bdfb6333915a8cbcc3285636f5038fdbc99.json  query-b0bc051ef86026b60ba3cc9e235d044b4988474e559c317898edf2df7ec17dad.json  query-bbc3c621bc2231139d22c69db1a6676b9f09d624388314d877dcfd259f01084d.json  query-e35be54c809095732f25700d97e6ad4e4084c9a99cba7fbba64fec2d2919de1a.json  query-eb32f4a51e3a6edbe74f75fde3f5600a1df8875bbbcd3a52beaa83530247fe45.json  query-ebe360a9318250c09132cd815ec5399c112ab093044a590455a91522ab25cfd6.json  query-fe7f3ce9d0087f83e52ca31d99d68d1d31b41de0c466d341ce3564225286eef0.json
logbook/migrations/: 000_system.sql  010_train.sql  020_game.sql  0_init.sql  1_normalize_dates.sql
logbook/src/: config.rs  extractors.rs  main.rs  models.rs  repos.rs  routers.rs  state.rs
(+135 files in other folders)
