[package]
name = "logbook-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
base64ct = { version = "1.6.0", features = [ "alloc" ] }
dotenvy = "0.15.7"
serde = { version = "1.0.160", features = [ "derive" ] }
sha2 = "0.10.6"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls" , "sqlite", "offline" ] }
tokio = { version = "1.27.0", features = [ "rt", "macros" ] }
