[package]
name = "logbook"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.3"
base64ct = { version = "1.7.3", features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.8.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["rt", "macros"] }
toml = "0.8.20"
